Java-Version auf Java 8 gesetzt